pyquest/tests/semantic_analysis/valid/test003.ql
// Identifier declared after reference in condition
form testForm {
	if (testIdentifier) {
		"First Question"
		anotherIdentifier : integer
	}
	"Second Question"
	testIdentifier : boolean
}